<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bharti.ideamax.AboutFragment">


    <RelativeLayout
        android:background="@drawable/aboutusimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ideamax"
            android:text="@string/im"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_weight="1.24" />





       </LinearLayout>
        <LinearLayout
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ideamax1"
                android:text="@string/aboutus2"
                android:textStyle="normal"

                android:textSize="20dp"
                android:layout_weight="1.24" />


        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ideamax2"
            android:text="@string/aboutus3"
            android:textStyle="normal"

            android:textSize="20dp"
            android:layout_weight="1.24" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ideamax3"
            android:text="@string/aboutus4"
            android:textStyle="normal"

            android:textSize="20dp"
            android:layout_weight="1.24" />


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ideamax4"
            android:text="@string/aboutus5"
            android:textStyle="normal"

            android:textSize="20dp"
            android:layout_weight="1.24" />


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ideamax5"
            android:text="@string/aboutus6"
            android:textStyle="normal"
            android:textSize="20dp"

            android:layout_weight="1.24" />


    </LinearLayout>



    </LinearLayout>


    </RelativeLayout>
</ScrollView>